<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codemonkeys.cpp.ThemeSelection"
    android:id="@+id/mainDrawer">

    <LinearLayout

        android:id="@+id/pageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <Button
            android:id="@+id/btnDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTheme"
            android:text="@string/themeDark"
            android:textColor="@color/userText"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTheme"
            android:text="@string/themeLight"
            android:textColor="@color/userText"
            android:background="@drawable/buttonshape"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTheme"
            android:text="@string/themeRed"
            android:textColor="@color/userText"
            android:background="@drawable/buttonshape"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTheme"
            android:text="@string/themeBlue"
            android:textColor="@color/userText"
            android:background="@drawable/buttonshape"/>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />
</android.support.v4.widget.DrawerLayout>
